# uni-work

./: README.md
COMP1511/22T1_exam/: exam_q1  exam_q1.c  exam_q2  exam_q2.c  exam_q3  exam_q3.c  exam_q4  exam_q4.c  exam_q5  exam_q5.c  exam_sa.txt
COMP1511/22T1_pracexam/: prac_q1  prac_q1.c  prac_q2  prac_q2.c  prac_q3  prac_q3.c  prac_q4.c  prac_q5.c  prac_sa.txt
COMP1511/22T1_pracexam_1/: prac_sa.txt
COMP1511/ass0/: cs_bowling  cs_bowling.c  cs_bowling.c~  testing.c  testing.c~
COMP1511/ass1/: cs_explorer  cs_explorer.c  cs_explorer.c~  cs_explorer_copy.c
COMP1511/ass2/: cs_airline  cs_airline.c  manifest.c
COMP1511/lectures/: constant  constant.c  constant.c~  dice_checker  dice_checker.c~  lower  lower.c  lower.c~  struct_intro  struct_intro.c  variable  variable.c  variable.c~  while_condition  while_condition.c  while_condition.c~  while_count  while_count.c  while_count.c~
COMP1521/: read_array.s
COMP1531/: package-lock.json
COMP2041/: khuu.py  sheepy2.py
COMP2521/: q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  q8.txt
COMP3121/: 3.1 drwaft.txt  COMP3121 A3 Q1.docx  COMP3121 A3 Q2.docx  COMP3121 Assignment 1.docx
COMP3141/Ex06/: Ex06.cabal  Ex06.hs  Main.hs  file.txt  output.txt
COMP3141/Ex06/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
COMP3141/a2/: Assignment2.cabal  QuizMarker.hs
COMP3141/a2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
MATH1231/: 1231_assignment.docx  MATH1231 Assignment.docx
(+599 files in other folders)
