name: Ex06
version: 1.0
cabal-version: >= 1.12
build-type: Simple
license: AllRightsReserved
stability: experimental
Executable Ex06
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: Ex06
  buildable: True
  build-depends:
      mtl -any, random -any,
      base -any, QuickCheck -any
